2010-10-04  Per Bothner  <per@bothner.com>

	* QuoteExp.java (EXPLICITLY_TYPED): New flag.
	(isExplicitlyTyped, setType): New methods.
	* InlineCalls.java (checkIntValue, checkLongValue, fixIntValue,
	fixLongValue): New methods.  Based on code that was in CompileArith.
	(visitQuoteExp): New method.

2010-10-01  Per Bothner  <per@bothner.com>

	Fix Savannah bug #31180 "exception in inline-compiler".
	* Declaration.java (load): Don't try to expand in-place the LambdaExp
	of a module-level functions since that is not inlined.
	See FindCaturedvars#visitLambdaExp.
	* Compilation.java (inlineOk): However, we do want to "inline" call to
	a private module-level procedure as a method call, even when immediate.

2010-09-30  Per Bothner  <per@bothner.com>

	* Compilation.java (langOptions): New field.
	(generateApplet, generateServlet): Remove fields. Instead use
	bits in langOptions.
	(generatingApplet, generatingServlet, sharedModuleDefs): New methods.
	* Language.java (parse): Set langOptions from options parameter.

2010-09-28  Per Bothner  <per@bothner.com>

	* TypeValue.java (emitTestIf): Fix error in javadoc.

	* LambdaExp.java (enterFunction):  If parameter is indirect-binding,
	change Variable's type to Location.

	* FindCapturedVars.java (checkInlineable): Remove unused local.

2010-09-20  Per Bothner  <per@bothner.com>

	* InlineCalls.java (checkType): New method, extracted from visit.
	Do SAM conversion: If the required type has a Single Abstract Method,
	you can use a lambda expression.

	* Language.java (parse): Set mustCompile here as appropriate.
	* ModuleExp.java (evalModule1): Don't need to set it here.

	* InlineCalls.java (visitSetExpValue): Use the raw type of decl,
	rather than using getType, which may force it to Object.

	* ClassExp.java (AbstractMethodFilter): Helper class moved to
	gnu.bytecode.ClassType.
	(compileMembers): Use new gnu.bytecode.ClassType#getAbstractMethods.

	* ClassExp.java (print) Some pretty-printing tweaks.
